# Pipenaut

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pipenaut/: __init__.py  __main__.py  cli.py  comms.py  display.py  model.py  profiler.py  runner.py
src/pipenaut/schedules/: __init__.py  gpipe.py  naive.py  one_f_one_b.py
