[project]
name = "pipenaut"
version = "0.1.6"
description = "Experience pipeline parallelism on your laptop. Naive, GPipe, 1F1B — one command."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vedant Shirgaonkar"},
]
keywords = ["pipeline-parallelism", "distributed", "deep-learning", "education", "demo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/VedantShirgaonkar/Pipenaut"
Repository = "https://github.com/VedantShirgaonkar/Pipenaut"

[project.scripts]
pipenaut = "pipenaut.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipenaut"]
